src/styles/layout.css
@import url(./global.css);

.title {
    max-width: 90%;
    max-height: 150px;
    width: auto;
    height: auto;

    user-select: none;
    cursor: pointer;
    transition: 0.3s ease;
}

.title-wrapper:hover .title {
    filter: brightness(1.1);
    transform: scale(1.05);
}

.title-wrapper:active .title {
    filter: brightness(0.9);
    transform: scale(0.95);
}

.full-body {
    max-width: 50%;
    max-height: 500px;
    width: auto;
    height: auto;
}

.center-text {
    text-align: center;
}

.shaded {
    background-color: var(--color-background-card);
}

.flexbox-x {
    display: flex;
    justify-content: center;
    align-items: center;
    
    padding: 10px;
    border-radius: 10px;
}

.flexbox-y {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    
    padding: 10px;
    border-radius: 10px;
}

.btn {
    padding: 10px;

    border-radius: 10px;
    text-decoration-line: none;
}

.btn-primary {
    background-color: var(--color-accent);
    border: 1px solid var(--color-accent-dark);
}

.btn-primary:hover {
    background-color: var(--color-accent-hover);
}

